--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,11 @@ pydantic = "^2.10.4"
 pydantic-settings = "^2.7.0"
 loguru = "^0.7.3"
 beanie = "^1.28.0"
+cryptography = "^44.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
 
 [build-system]
 requires = ["poetry-core"]
