--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ cryptography = "^44.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
