--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ pydantic-settings = "^2.7.0"
 loguru = "^0.7.3"
 beanie = "^1.28.0"
 cryptography = "^44.0.0"
+celery = "^5.4.0"
+redis = "^5.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
