--- a/.github/workflows/backend-check.yml
+++ b/.github/workflows/backend-check.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: backend
-        run: poetry install
+        run: poetry install --no-root
 
       - name: Run tests
         working-directory: backend
