--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,14 @@ API_ORIGINS='["*"]'
 DB_HOST=localhost
 DB_PORT=27017
 DB_NAME=name
+
+
+# CELERY
+
+CELERY_BROKER=redis
+CELERY_HOST=localhost
+CELERY_PORT=6379
+
+# MISC
+
+DELETE_TIME=1 # in minutes
