fix celery: remove broker env name, simplify getting url

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,13 +10,12 @@ DB_HOST=localhost
 DB_PORT=27017
 DB_NAME=name
 
-
 # CELERY
 
-CELERY_BROKER=redis
 CELERY_HOST=localhost
 CELERY_PORT=6379
 
 # MISC
 
-DELETE_TIME=1 # in minutes
+# in minutes
+DELETE_TIME=1
